# Chess_AI_ROCm

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  alpha.py  alpha_test.py  chess_engine.py  chess_mcts.py  chess_neuron.py  demo.py  lancer.py  lancer_test.py  main.py  negamaxAI.py  play_chess.py  pyproject.toml  replit.nix  requirement.txt  requirements.txt  test.py
alpha/: alpha.py  alpha_mcts.py  alpha_neuron.py  alpha_test.py
beta/: beta.py  beta_mcts.py  beta_neuron.py  beta_test.py
data/: .gitignore
modules/: chess_config.py  chess_engine.py  chess_log.py  chess_mcts.py  chess_mcts_old.py  chess_mcts_rs.py  chess_model.py  chess_neuron.py  chess_play.py  chess_train.py  self_play.py  train_loop.py
modules/config/: chess_config.py  config.py  logger.py
modules/engine/: chess_mcts_rs.py  mcts.py
modules/game/: chess_play.py  player.py  self_play.py
modules/model/: chess_engine.py  chess_model.py  model.py  neuron.py
modules/training/: chess_train.py  train_loop.py  trainer.py  trainner.py
old/: lancer_old.py
src/: lib.rs
src/modules/: mcts.rs
stockfish/: download_stockfish.py
