# cấu trúc để chạy trên replit.com
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "Chess_AI_ROCm"
version = "0.1.0"
description = "AI chơi cờ vua với MCTS và Deep Learning, tối ưu cho GPU AMD ROCm"
authors = [
    { name = "Nguyễn Lê Văn Dũng", email = "dungnguyen2661@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "chess==1.11.2",
    "colorlog==6.9.0",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "maturin==1.10.2"
]

#[tool.uv.sources]
#pytorch-cpu = { url = "https://download.pytorch.org/whl/cpu" }
